refers to #20. Issue that signal is drawn too small is solved.

--- a/src/styles.css
+++ b/src/styles.css
@@ -132,3 +132,12 @@ footer{
 .error-tooltip .description {
     font-size: 0.8em;
 }
+
+#logo{
+    text-align:center;
+    width:100%;
+    display:block;
+    font-size:5em;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-weight: 300;
+}
